kubernetes/apps/default/jellyfin/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-tcp
  labels:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.2.205
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
  ports:
    - protocol: TCP
      port: 8096
      targetPort: http
      name: http
