kubernetes/apps/default/jellyfin/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt'
    kubernetes.io/ingress.class: 'traefik'
spec:
  rules:
    - host: jellyfin.fadhlika.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  name: http
  tls:
    - secretName: jellyfin-tls
      hosts:
        - jellyfin.fadhlika.com
